card index stuffs

--- a/players-guide/book.toml
+++ b/players-guide/book.toml
@@ -4,3 +4,4 @@ language = "en"
 multilingual = false
 src = "src"
 title = "Remaining Teenagers: Zero - Player's Guide"
+description = "Remaining Teenagers: Zero, (or **RT:0** for short), is a sci-fi/fantasy tabletop roleplaying game played with Tarot decks, where seven haunted teenagers must survive one school year on a moonbase with an insane computer."
