--- a/printshop/package.json
+++ b/printshop/package.json
@@ -7,5 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "fast-xml-parser": "^4.4.0",
+    "marked": "^13.0.2"
+  }
 }
