--- a/players-guide/book.toml
+++ b/players-guide/book.toml
@@ -5,3 +5,13 @@ multilingual = false
 src = "src"
 title = "Remaining Teenagers: Zero - Player's Guide"
 description = "Remaining Teenagers: Zero, (or **RT:0** for short), is a sci-fi/fantasy tabletop roleplaying game played with Tarot decks, where haunted teenagers must survive one school year on a moonbase with an insane computer."
+
+[preprocessor]
+
+[preprocessor.mermaid]
+command = "mdbook-mermaid"
+
+[output]
+
+[output.html]
+additional-js = ["mermaid.min.js", "mermaid-init.js"]
